--- a/app/views/jogo.ejs
+++ b/app/views/jogo.ejs
@@ -19,6 +19,24 @@
 				$("#btnSair").click(function(){
 					window.location.href = "/sair";
 				});
+				$("#btnSuditos").click(function(){
+					$.ajax({
+						url: "/suditos",
+						method: "get",
+						success: function(data){ // data == result from get
+							$("#acoes").html(data);
+						}
+					});
+				});
+				$("#btnPergaminhos").click(function(){
+					$.ajax({
+						url: "/pergaminhos",
+						method: "get",
+						success: function(data){ // data == result from get
+							$("#acoes").html(data);
+						}
+					});
+				});
 			});
 		</script>
 	</head>
@@ -37,29 +55,29 @@
 	    	
 			<div class="row">
 	    		<div class="col-sm-3 casa">
-					<img src="images/casa_martell.jpg" />
+					<img src="images/casa_<%=casa%>.jpg" />
 				</div>
 
 	    		<div class="col-sm-9">
 					<div class="row barra-superior">
 						<div class="col-sm-2"> 
 							<img src="images/habilidades/temor.jpg" title="Temor" alt="Temor" />
-							<span>754</span>
+							<span><%=jogo.temor%></span>
 						</div>
 						
 						<div class="col-sm-2"> 
 							<img src="images/habilidades/sabedoria.jpg" title="Sabedoria" alt="Sabedoria"/>
-							<span>754</span>
+							<span><%=jogo.sabedoria%></span>
 						</div>
 						
 						<div class="col-sm-2"> 
 							<img src="images/habilidades/comercio.jpg" title="Comércio" alt="Comércio"/>
-							<span>754</span>
+							<span><%=jogo.comercio%></span>
 						</div>
 						
 						<div class="col-sm-2"> 
 							<img src="images/habilidades/magia.jpg" title="Magia" alt="Magia"/>
-							<span>754</span>
+							<span><%=jogo.magia%></span>
 						</div>
 					</div>
 				</div>
@@ -68,7 +86,9 @@
 			<div class="row">
 				<div class="col-sm-3"></div>
 				<div class="col-sm-9">
-					<div class="acoes"></div>					
+					<div class="acoes" id="acoes">
+						Senhor, o que deseja fazer hoje?
+					</div>					
 				</div>
 			</div>
 			
@@ -79,18 +99,19 @@
 			
 				<div class="row">
 					<div class="col-sm-1">
-						<img src="images/outros/suditos.jpg" title="Aldeões" alt="Aldeões"/>
+						<img src="images/outros/suditos.jpg" title="Aldeões" alt="Aldeões" id="btnSuditos"/>
+						<span><%=jogo.suditos%></span>
 					</div>
 					
 					<div class="col-sm-1">
-						<img src="images/outros/pergaminho.jpg" title="Pergaminhos" alt="Pergaminhos"/>
+						<img src="images/outros/pergaminho.jpg" title="Pergaminhos" alt="Pergaminhos" id="btnPergaminhos"/>
 					</div>
 					
 					<div class="col-sm-8"></div>
 					
 					<div class="col-sm-2">
 						<img src="images/outros/moeda.jpg" title="Moeda" alt="Moeda"/>
-						<span>25</span>
+						<span><%=jogo.moeda%></span>
 					</div>
 					
 				</div>
