--- a/app/views/jogo.ejs
+++ b/app/views/jogo.ejs
@@ -1,121 +1,174 @@
 <!DOCTYPE HTML>
 <html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
 
-		<title>MMORPG - Game of Thrones</title>
-		
-		<!-- JQuery -->
-		<script src="js/jquery-2.2.1.js"></script>
+<head>
+	<meta charset="UTF-8">
 
-		<!-- bootstrap - link cdn -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	
-		<!-- incluindo css -->
-		<link href="css/style.css" rel="stylesheet">
+	<title>MMORPG - Game of Thrones</title>
 
-		<script>
-			$(document).ready(function(){
-				$("#btnSair").click(function(){
-					window.location.href = "/sair";
-				});
-				$("#btnSuditos").click(function(){
-					$.ajax({
-						url: "/suditos",
-						method: "get",
-						success: function(data){ // data == result from get
-							$("#acoes").html(data);
-						}
-					});
-				});
-				$("#btnPergaminhos").click(function(){
-					$.ajax({
-						url: "/pergaminhos",
-						method: "get",
-						success: function(data){ // data == result from get
-							$("#acoes").html(data);
-						}
-					});
+	<!-- JQuery -->
+	<script src="js/jquery-2.2.1.js"></script>
+
+	<!-- bootstrap - link cdn -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+	 crossorigin="anonymous">
+
+	<!-- incluindo css -->
+	<link href="css/style.css" rel="stylesheet">
+
+	<script>
+		var timerID = null;
+		$(document).ready(function () {
+			$("#btnSair").click(function () {
+				window.location.href = "/sair";
+			});
+			$("#btnSuditos").click(function () {
+				$("#msg").hide();
+				$.ajax({
+					url: "/suditos",
+					method: "get",
+					success: function (data) { // data == result from get
+						$("#acoes").html(data);
+					}
 				});
 			});
-		</script>
-	</head>
+			$("#btnPergaminhos").click(function () {
+				$("#msg").hide();
+				$.ajax({
+					url: "/pergaminhos",
+					method: "get",
+					success: function (data) { // data == result from get
+						$("#acoes").html(data);
+						clearTimeout(timerID);
+						cronometro();
+					}
+				});
+			});
+		});
 
-	<body class="body-jogo">
+		function cronometro() {
+			$(".tempoRestante").each(function () {
+				var segundos = $(this).html(); //elemento atual
+				var segundos_atuais = parseInt(segundos) - 1;
+				if (segundos_atuais < 0) {
+					window.location.href = "/jogo?msg=C";
+				}
+				else
+					$(this).html(segundos_atuais);
+			});
+			timerID = setTimeout("cronometro()", 1000)
+		}
+	</script>
+</head>
 
-		<nav class="navbar navbar-default navbar-static-top">
-			<div class="container">
-				<div class="form-group sair">
-					<button type="button" class="btn btn-info pull-right" id="btnSair">Sair</button>
-				</div>
-			</div>
-		</nav>
+<body class="body-jogo">
 
-	    <div class="container">
-	    	
-			<div class="row">
-	    		<div class="col-sm-3 casa">
-					<img src="images/casa_<%=casa%>.jpg" />
-				</div>
-
-	    		<div class="col-sm-9">
-					<div class="row barra-superior">
-						<div class="col-sm-2"> 
-							<img src="images/habilidades/temor.jpg" title="Temor" alt="Temor" />
-							<span><%=jogo.temor%></span>
-						</div>
-						
-						<div class="col-sm-2"> 
-							<img src="images/habilidades/sabedoria.jpg" title="Sabedoria" alt="Sabedoria"/>
-							<span><%=jogo.sabedoria%></span>
-						</div>
-						
-						<div class="col-sm-2"> 
-							<img src="images/habilidades/comercio.jpg" title="Comércio" alt="Comércio"/>
-							<span><%=jogo.comercio%></span>
-						</div>
-						
-						<div class="col-sm-2"> 
-							<img src="images/habilidades/magia.jpg" title="Magia" alt="Magia"/>
-							<span><%=jogo.magia%></span>
-						</div>
-					</div>
-				</div>
-	    	</div>
-			
-			<div class="row">
-				<div class="col-sm-3"></div>
-				<div class="col-sm-9">
-					<div class="acoes" id="acoes">
-						Senhor, o que deseja fazer hoje?
-					</div>					
-				</div>
-			</div>
-			
-		</div>	
-		
-		<div class="barra-inferior">
-			<div class="container">
-			
-				<div class="row">
-					<div class="col-sm-1">
-						<img src="images/outros/suditos.jpg" title="Aldeões" alt="Aldeões" id="btnSuditos"/>
-						<span><%=jogo.suditos%></span>
-					</div>
-					
-					<div class="col-sm-1">
-						<img src="images/outros/pergaminho.jpg" title="Pergaminhos" alt="Pergaminhos" id="btnPergaminhos"/>
-					</div>
-					
-					<div class="col-sm-8"></div>
-					
-					<div class="col-sm-2">
-						<img src="images/outros/moeda.jpg" title="Moeda" alt="Moeda"/>
-						<span><%=jogo.moeda%></span>
-					</div>
-					
-				</div>
+	<nav class="navbar navbar-default navbar-static-top">
+		<div class="container">
+			<div class="form-group sair">
+				<button type="button" class="btn btn-info pull-right" id="btnSair">Sair</button>
 			</div>
 		</div>
-	</body>
+	</nav>
+
+	<div class="container">
+
+		<%if(msg == "A"){%>
+			<div class="alert alert-danger" id="msg">
+				<Strong>Operação inválida, verifique se todos os campos foram informados.</Strong>
+			</div>
+			<%}%>
+				<%if(msg == "B"){%>
+					<div class="alert alert-info" id="msg">
+						<Strong>Ação realizada com sucesso.</Strong>
+					</div>
+					<%}%>
+						<%if(msg == "C"){%>
+							<div class="alert alert-info" id="msg">
+								<Strong>Tarefa concluída!</Strong>
+							</div>
+							<%}%>
+								<%if(msg == "D"){%>
+									<div class="alert alert-info" id="msg">
+										<Strong>Tarefa revogada!</Strong>
+									</div>
+									<%}%>
+										<div class="row">
+											<div class="col-sm-3 casa">
+												<img src="images/casa_<%=casa%>.jpg" />
+											</div>
+
+											<div class="col-sm-9">
+												<div class="row barra-superior">
+													<div class="col-sm-2">
+														<img src="images/habilidades/temor.jpg" title="Temor" alt="Temor" />
+														<span>
+															<%=jogo.temor%>
+														</span>
+													</div>
+
+													<div class="col-sm-2">
+														<img src="images/habilidades/sabedoria.jpg" title="Sabedoria" alt="Sabedoria" />
+														<span>
+															<%=jogo.sabedoria%>
+														</span>
+													</div>
+
+													<div class="col-sm-2">
+														<img src="images/habilidades/comercio.jpg" title="Comércio" alt="Comércio" />
+														<span>
+															<%=jogo.comercio%>
+														</span>
+													</div>
+
+													<div class="col-sm-2">
+														<img src="images/habilidades/magia.jpg" title="Magia" alt="Magia" />
+														<span>
+															<%=jogo.magia%>
+														</span>
+													</div>
+												</div>
+											</div>
+										</div>
+
+										<div class="row">
+											<div class="col-sm-3"></div>
+											<div class="col-sm-9">
+												<div class="acoes" id="acoes">
+													Senhor, o que deseja fazer hoje?
+												</div>
+											</div>
+										</div>
+
+	</div>
+
+	<div class="barra-inferior">
+		<div class="container">
+
+			<div class="row">
+				<div class="col-sm-1">
+					<img src="images/outros/suditos.jpg" title="Aldeões" alt="Aldeões" id="btnSuditos" />
+					<span>
+						<%=jogo.suditos%>
+					</span>
+				</div>
+
+				<div class="col-sm-1">
+					<img src="images/outros/pergaminho.jpg" title="Pergaminhos" alt="Pergaminhos" id="btnPergaminhos" />
+				</div>
+
+				<div class="col-sm-8"></div>
+
+				<div class="col-sm-2">
+					<img src="images/outros/moeda.jpg" title="Moeda" alt="Moeda" />
+					<span>
+						<%=jogo.moeda%>
+					</span>
+				</div>
+
+			</div>
+		</div>
+	</div>
+</body>
+
 </html>
