--- a/app/views/pergaminhos.ejs
+++ b/app/views/pergaminhos.ejs
@@ -1,10 +1,39 @@
-<div id="pergaminhos">					
+<div id="pergaminhos">
 	<h3>Pergaminhos</h3>
-	
+
 	<ul>
-		<li>1 enforcamento(s) programado - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
-		<li>2 aldeão(ões) em treinamento de magia - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
-		<li>1 aldeão(ões) em treinamento de história - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
-		<li>5 aldeão(ões) coletando recursos - <small>restam 00000 segundos - <a href="#">revogar ordem</a></small></li>
+		<%for(var i=0; i < acoes.length; i++){%>
+			<%
+			console.log("acoes = ", acoes)
+				var acao = "";
+				switch(acoes[i].acao){
+					case "1": 
+						acao = " aldeão(ões) coletando recursos";
+						break;
+					case "2": 
+						acao = " enforcarmento(s) aldeão";
+						break;
+					case "3": 
+						acao = " aldeão(ões) em treinamento de história";
+						break;
+					case "4": 
+						acao = " aldeão(ões) em treinamento de magia";
+						break;
+				}
+				var date = new Date();
+				var momentoAtual = date.getTime();
+				var segundosRestantes = Math.round((acoes[i].acao_termina_em - momentoAtual) / 1000);
+			%>
+				<li>
+					<%=acoes[i].quantidade%>
+						<%=acao%>
+							<small> - restam
+								<span class="tempoRestante">
+									<%=segundosRestantes%>
+								</span> segundos -
+								<a href="/revogar_acao?id=<%=acoes[i]._id%>">revogar ordem</a>
+							</small>
+				</li>
+				<%}%>
 	</ul>
 </div>
